--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,29 @@
 /* Import Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Muli:wght@400;700&family=Nunito:wght@400;700&family=Oswald:wght@400;700&family=Permanent+Marker&family=Quicksand:wght@400;700&family=Raleway:wght@400;700&display=swap');
 
+	    
+	    /* Scrollbar styling */
+	body::-webkit-scrollbar {
+	    width: 10px; /* Width of the scrollbar */
+	}
+	
+	/* Scrollbar track */
+	body::-webkit-scrollbar-track {
+	    background: #2957a5; /* Background color of the scrollbar track */
+	   
+	}
+	
+	/* Scrollbar thumb */
+	body::-webkit-scrollbar-thumb {
+	    background-color: #feda62; /* Color of the scrollbar thumb */
+	  
+	  
+	}
+	
+	/* Scrollbar thumb hover effect */
+	body::-webkit-scrollbar-thumb:hover {
+	    background-color: #feda62; /* Darker color when hovering */
+	}
 
 
 /* General Styles */
